kubernetes/service.yml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: railsdocker
  name: rd-service
spec:
  type: NodePort
  selector:
    app: railsdocker
  ports:
  - port: 3000
    targetPort: 3000
