kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rd-ingress
spec:
  backend:
    serviceName: rd-service
    servicePort: 3000
